# Twist

./: CMakeLists.txt
futex_like/: CMakeLists.txt  README.md
futex_like/cmake/: Cxx.cmake  Werror.cmake
futex_like/examples/: CMakeLists.txt
futex_like/examples/flag/: CMakeLists.txt  main.cpp
futex_like/examples/mutex/: CMakeLists.txt  main.cpp  mutex.hpp
futex_like/source/: CMakeLists.txt
futex_like/source/futex_like/: wait_wake.hpp
futex_like/source/futex_like/atomic/: prepare_wake.hpp  ref.hpp  wait.hpp  wait_timed.hpp  wake.hpp  wake_key.hpp
futex_like/source/futex_like/atomic/ref/: uint32.hpp  uint64.hpp
futex_like/source/futex_like/system/: wait.hpp
futex_like/source/futex_like/system/darwin/: ulock.h  wait.cpp
futex_like/source/futex_like/system/linux/: wait.cpp
futex_like/source/futex_like/system/windows/: wait.cpp
futex_like/tests/: CMakeLists.txt  unit.cpp
gflags/: CMakeLists.txt
sure/: CMakeLists.txt  README.md
sure/cmake/: MachineContext.cmake  Platform.cmake
sure/docs/ru/: guide.md
sure/source/: CMakeLists.txt
sure/source/sure/: build.hpp  context.cpp  context.hpp  stack.hpp  stack_view.hpp  trampoline.hpp
sure/source/sure/machine/: context.hpp
sure/source/sure/machine/armv8_a_64/: context.S  context.cpp  context.h  context.hpp
sure/source/sure/machine/no/: context.hpp
sure/source/sure/machine/ucontext/: context.cpp  context.hpp
sure/source/sure/machine/x86_64/: context.cpp  context.hpp
sure/source/sure/machine/x86_64_win/: context.S  context.cpp  context.h  context.hpp
sure/source/sure/sanitizer/address/: context.hpp
sure/source/sure/sanitizer/nop/: context.hpp
sure/source/sure/sanitizer/thread/: context.hpp
sure/source/sure/stack/: mmap.cpp  mmap.hpp  new.hpp
sure/tests/: CMakeLists.txt  coroutine.cpp  mmap_stack.cpp  new_stack.cpp
twist/: .gitlab-ci.yml  CMakeLists.txt  README.md
twist/cmake/: CollectSources.cmake  CompileOptions.cmake  Pedantic.cmake  Platform.cmake  PrintDiagnostics.cmake  Sanitize.cmake  StdLibrary.cmake
twist/demo/: CMakeLists.txt
twist/demo/bounded_queue/: CMakeLists.txt  README.md  bounded_queue.hpp  main.cpp
twist/demo/mutex_lock_order/: CMakeLists.txt  README.md  main.cpp
twist/demo/pthread_cond/: CMakeLists.txt  README.md  cond_pthread.hpp  main.cpp  mutex.hpp
twist/demo/treiber_stack/: CMakeLists.txt  main.cpp  treiber_stack.hpp
twist/docs/: research.md
twist/docs/ru/: README.md  debug.md
twist/docs/ru/twist/: assist.md  build.md  code.md  test.md  trace.md
twist/docs/ru/twist/ed/: static.md  std.md  wait.md
twist/examples/: CMakeLists.txt
twist/examples/assist/: CMakeLists.txt  main.cpp
twist/examples/chrono/: CMakeLists.txt  main.cpp
twist/examples/futex/: CMakeLists.txt  main.cpp
twist/examples/spin/: CMakeLists.txt  main.cpp
twist/examples/static/: CMakeLists.txt  main.cpp
twist/examples/thread_local/: CMakeLists.txt  main.cpp
twist/examples/trace/: CMakeLists.txt  main.cpp
twist/play/: CMakeLists.txt  main.cpp
twist/source/: CMakeLists.txt
twist/source/twist/: build.cpp  build.hpp  cross.hpp  sim.hpp  thr.hpp
twist/source/twist/assist/: assert.hpp  fiber.hpp  memory.hpp  preempt.hpp  prune.hpp  random.hpp  shared.hpp  step_over.hpp  twisted.hpp
twist/source/twist/ed/c/: abort.hpp  malloc.hpp  write.hpp
twist/source/twist/ed/fmt/: print.hpp
twist/source/twist/ed/static/: member.hpp  var.hpp
twist/source/twist/ed/std/: atomic.hpp  chrono.hpp  condition_variable.hpp  lock_guard.hpp  mutex.hpp  random.hpp  shared_mutex.hpp  thread.hpp  unique_lock.hpp
twist/source/twist/ed/wait/: futex.hpp  spin.hpp
twist/source/twist/mod/: cross.hpp  sim.hpp  thr.hpp
twist/source/twist/mod/cross/: cross.cpp  main.hpp  params.hpp
twist/source/twist/mod/sim/: det.hpp  explore.hpp  futex.hpp  memory.hpp  print.hpp  sim.cpp  simulator.hpp  switch_to.hpp  test.hpp
twist/source/twist/mod/thr/: main.hpp  params.hpp  thr.cpp
twist/source/twist/test/: assert.hpp  budget.hpp  checkpoint.hpp  checksum.hpp  choice.hpp  cs.hpp  either.hpp  inject_fault.hpp  lock_free.hpp  message.hpp  new_iter.hpp  plate.hpp  wg.hpp
twist/source/twist/trace/: attr.hpp  attr_value.hpp  context.hpp  domain.cpp  domain.hpp  event.hpp  fmt.hpp  id.hpp  loc.hpp  note.hpp  note_context.hpp  runtime.hpp  scope.cpp  scope.hpp
twist/source/twist/trace/attr/: bool.hpp  fmt.hpp  ptr.hpp  str.hpp  uint.hpp  unit.hpp
twist/source/twist/trace/detail/: tmp_format.cpp  tmp_format.hpp
twist/source/twist/wheels/: stacktrace.cpp  stacktrace.hpp
twist/source/twist/wheels/fmt/: buffer.hpp  source_location.hpp
twist/source/twist/wheels/random/: README.md  mt.hpp  wyrand.hpp
twist/tests/: CMakeLists.txt
twist/tests/cross/stress/: CMakeLists.txt  atomic_flag.cpp  futex.cpp  sleep_for.cpp
twist/tests/cross/unit/: CMakeLists.txt
twist/tests/cross/unit/assist/: CMakeLists.txt  assist.cpp
twist/tests/cross/unit/fiber/: CMakeLists.txt  coroutine.cpp  coroutine.hpp  fiber.cpp
twist/tests/cross/unit/futex/: CMakeLists.txt  futex.cpp
twist/tests/cross/unit/memory/: CMakeLists.txt  malloc.cpp  new.cpp
twist/tests/cross/unit/random/: CMakeLists.txt  random.cpp
twist/tests/sim/: CMakeLists.txt
twist/tests/sim/abort/: CMakeLists.txt  main.cpp
twist/tests/sim/abort_static/: CMakeLists.txt  main.cpp
twist/tests/sim/assist/: CMakeLists.txt  main.cpp
twist/tests/sim/det_check/: CMakeLists.txt  main.cpp
twist/tests/sim/digest/: CMakeLists.txt  main.cpp
twist/tests/sim/happens_before/: CMakeLists.txt  main.cpp
twist/tests/sim/memory/: CMakeLists.txt  main.cpp
twist/tests/sim/params/: CMakeLists.txt  main.cpp
twist/tests/sim/rmw/: CMakeLists.txt  main.cpp
twist/tests/sim/scheduler/: CMakeLists.txt
twist/tests/sim/spurious/: CMakeLists.txt  main.cpp
twist/tests/sim/stat/: CMakeLists.txt  main.cpp
twist/tests/sim/static/: CMakeLists.txt  main.cpp
twist/tests/sim/thread_detach/: CMakeLists.txt  main.cpp
twist/tests/sim/time/: CMakeLists.txt  main.cpp
twist/tests/sim/write/: CMakeLists.txt  main.cpp
twist/workloads/: CMakeLists.txt  mutex.cpp
(+376 files in other folders)
