ProjectLog("Simulation tests")

add_subdirectory(static)
add_subdirectory(time)
add_subdirectory(write)
add_subdirectory(digest)
add_subdirectory(spurious)
add_subdirectory(stat)

if(TWIST_SIM_ISOLATION)
    add_subdirectory(thread_detach)
    add_subdirectory(abort)
    add_subdirectory(abort_static)
    add_subdirectory(memory)
    add_subdirectory(det_check)
    add_subdirectory(scheduler)
    add_subdirectory(assist)
    add_subdirectory(rmw)
    add_subdirectory(happens_before)
    add_subdirectory(params)
endif()
